--- a/Main.css
+++ b/Main.css
@@ -4,7 +4,7 @@
 
 .container{
     max-width: 2100px;
-    text-align: center;
+    align-items: center;
     padding: 0 30px;
     margin: 0 auto;
 }
