--- a/Main.css
+++ b/Main.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
 /*font-family: "Winky Sans", sans-serif; example of applying a font to the text*/
 
+
 .container{
     max-width: 2100px;
     align-items: center;
@@ -14,9 +15,12 @@
     background-color: rgb(0, 102, 255);
 }
 .container2{
-    max-width: 2100px;
+    max-width: 2100px;   
+    display: flex;
+    justify-content: center;
     align-items: center;
-    text-align: center;
+    height: 300px;
+    background-color: rgb(238, 255, 0);
     padding: 0 30px;
     margin: 0 auto;
 }
@@ -39,4 +43,15 @@
     display:flex;
     align-items: flex-start;
     padding-bottom: 15px ;
+}
+.maintext{
+    max-width: 400px;   
+    display: flex;
+    
+    justify-content: center;
+    text-align: center;
+    height: 200px;
+    background-color: rgb(255, 0, 0);
+    padding: 0 30px;
+    margin: 0 auto;
 }
