--- a/Main.css
+++ b/Main.css
@@ -5,10 +5,10 @@
 
 .container{
     max-width: 2100px;
-    align-items: center;
+    justify-content: space-between;
     text-align: center;
-    padding: 0 30px;
-    margin: 0 auto;
+     /*padding: 0 30px;*/
+     margin: 0 auto;
 }
 .Header{
     padding-top: 10px;
@@ -30,7 +30,8 @@
 
 .header-nav{
     display:flex;
-    background-color: aqua;
+    background-color: rgb(255, 255, 255);
+    height: 35px;
     align-items: center;
 }
 .header-list{
