--- a/Main.css
+++ b/Main.css
@@ -4,8 +4,8 @@
 
 
 .container{
-    max-width: 2100px;
-    justify-content: space-between;
+    max-width: 2000px;
+    justify-content: center;
     text-align: center;
      /*padding: 0 30px;*/
      margin: 0 auto;
@@ -13,16 +13,17 @@
 }
 .Header{
     padding-top: 10px;
-    background-color: rgb(255, 166, 0);
+    background-color: rgb(214, 211, 211);
 }
 .container2{
-    max-width: 2100px;   
+    max-width:2000px ;
+    height:100px ;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
+    justify-content:baseline;
+    align-items:center;
+    text-wrap:wrap;
     background-color: rgb(238, 255, 0);
-    padding: 0 30px;
+    
     margin: 0 auto;
 }
       
@@ -31,7 +32,7 @@
 
 .header-nav{
     display:flex;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
     height: 35px;
     align-items: center;
 }
@@ -42,14 +43,13 @@
  }  
 
 .logo {
-    display:flex;
-     padding-left: 15px;
-    padding-bottom: 15px ;
+    max-width: 2000px;
+   padding-bottom: 15px;
+   margin: 0 auto;
 }
 .maintext{
     max-width: 400px;   
     display: flex;
-    
     justify-content: center;
     text-align: center;
     height: 200px;
